changed hover color accents

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body{
 }
 
 .navOptionsContainer li:hover{
-    color: #e67e22;
+    color: #7BC7E2;
 }
 
 .quotebutton{
@@ -73,7 +73,7 @@ body{
 }
 
 .quotebutton:hover{
-   background-color:  #e67e22;
+   background-color:  #56c1e7;
 }
 
 .pageOne{
