--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@ body{
     flex-direction: column;
     align-items: center;
     font-family: Roboto;
+    width: 100%;
 }
 
 .navbar{
-    width: 100svw;
+    width: 100%;
     height: 80px;
     padding: 24px;
     box-sizing: border-box;
@@ -78,7 +79,7 @@ body{
 
 .pageOne{
     height: calc(100svh - 80px);
-    width: 100svw;
+    width: 100%;
     box-sizing: border-box;
     padding: 80px;
     gap: 80px;
@@ -89,10 +90,49 @@ body{
 
 .pageOneBackColor{
     height: 100svh;
-    width: 100svw;
+    width: 100%;
     position: absolute;
     top: 0;background-color: #BDE3F0;
     z-index: -1;
     -webkit-mask-image: linear-gradient(#000 50%, rgba(0,0,0,0));
     mask-image: linear-gradient(#000, rgba(0,0,0,0));
+}
+
+.pageTwo{
+    width: 100%;
+    height: 100svh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+}
+
+.cardsContainer{
+    height: 500px;
+    width: 660px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    /* grid-template-rows: 1fr 1fr; */
+    
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    padding-bottom: 0%;
+    height: 220px;
+    width: 270px;
+    background-color: #F9FCFD;
+}
+
+.card ul{
+    padding: 20px;
+    margin: 0%;
+    line-height: 28px;
+}
+
+.card p{
+    margin-bottom: 0;
 }
