--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
     align-items: center;
     font-family: Roboto;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .navbar{
@@ -208,4 +209,8 @@ body{
     align-items: center;
     width: 100%;
     height: 100svh;
+}
+
+.pageFour img{
+    width: 390px;
 }
