--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,41 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins&family=Roboto:wght@400;500;700&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+body {
     padding: 0%;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     font-family: Roboto;
     width: 100%;
     overflow-x: hidden;
 }
 
-.navbar{
-    width: 100%;
-    height: 80px;
-    padding: 24px;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-
-
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
-.logo{
+.navbar {
+    width: 100%;
+    height: 70px;
+    padding-left: 24px;
+    padding-right: 24px;
+    box-sizing: border-box;
+    display: flex;
+    background: #BDE3F0;
+    align-items: center;
+}
+
+.logo {
     width: 60px;
     height: 60px;
     flex-shrink: 0;
 }
 
-.navOptionsContainer{
+.navOptionsContainer {
     display: flex;
     margin: 0;
     padding: 0;
@@ -34,14 +43,20 @@ body{
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
-    line-height: 24px; /* 150% */
+    line-height: 24px;
+    /* 150% */
     letter-spacing: 0.5px;
     margin-left: 35px;
     gap: 30px;
     flex: 1;
 }
 
-.navOptionsContainer li{
+.navOptionsContainer li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.navOptionsContainer li {
     margin: 0;
     list-style: none;
     padding: 0;
@@ -49,11 +64,11 @@ body{
     transition: color 150ms;
 }
 
-.navOptionsContainer li:hover{
+.navOptionsContainer li:hover {
     color: #0cb0ea;
 }
 
-.quotebutton{
+.quotebutton {
     font-family: Roboto;
     font-size: 18px;
     font-style: normal;
@@ -70,140 +85,207 @@ body{
     justify-content: center;
     transition: background-color 150ms;
     flex-shrink: 0;
+}
 
+.quotebutton:hover {
+    background-color: #0cb0ea;
 
 }
 
-.quotebutton:hover{
-   background-color:  #0cb0ea;
-   
-}
-
-.pageOne{
-    /* height: calc(100svh - 80px); */
+.pageOne {
+    height: calc(100svh - 68px);
     width: 100%;
     box-sizing: border-box;
-    padding: 80px;
-    gap: 80px;
+    padding: 0 80px;
     display: flex;
+    background: linear-gradient(#BDE3F0 20%, rgba(0, 0, 0, 0));
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
-.leftContainer{
-    width: 35%; 
-    min-width: 330px; 
-    align-self: flex-start; 
+.leftContainer {
+    /* width: 35%; */
+    min-width: 330px;
+    max-width: 550px;
+    align-self: flex-start;
     gap: 20px;
-    
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 50px;
+
 }
 
-.heading{
-    font-size: 60px; 
+.leftContainer p {
+    min-width: 280px;
+}
+
+.heading {
+    font-size: 60px;
+    margin-top: 0;
     margin-bottom: 30px;
 }
 
-.pageOne img{
-    width: 500px;
-}
-
-.pageOneBackColor{
-    height: 100svh;
-    width: 100%;
-    position: absolute;
-    top: 0;background-color: #BDE3F0;
-    z-index: -1;
-    -webkit-mask-image: linear-gradient(#000 50%, rgba(0,0,0,0));
-    mask-image: linear-gradient(#000, rgba(0,0,0,0));
-}
-
-.pageTwo{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5%;
-    margin-top: 100px;
-    position: relative;
-}
-.personalized{
-    width: 350px;
-}
-
-.pageTwo img{
-    width: 90%; 
-    height: 600px; 
-    position: absolute; 
-    z-index: -1; 
-    top: -45px;
-}
-
-.cardsContainer{
-    height: 500px;
-    width: 660px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-    /* grid-template-rows: 1fr 1fr; */
-    
-}
-
-.card{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    padding-bottom: 0%;
-    height: 220px;
-    width: 270px;
-    background-color: #F9FCFD;
-}
-
-.card ul{
-    padding: 20px;
-    margin: 0%;
-    line-height: 28px;
-}
-
-.card p{
+.hero-img {
+    margin-top: auto;
     margin-bottom: 0;
 }
 
-.pageThree{
+.pageOne img {
+    width: 500px;
+}
+
+.pageOneBackColor {
+    height: 100svh;
     width: 100%;
-    margin-top: 140px;
-    /* height: 100svh; */
+    position: absolute;
+    top: 0;
+    background-color: #BDE3F0;
+    z-index: -1;
+    -webkit-mask-image: linear-gradient(#000 50%, rgba(0, 0, 0, 0));
+    mask-image: linear-gradient(#000, rgba(0, 0, 0, 0));
+}
+
+.pageTwo {
+    width: 100%;
+    padding: 100px 60px;
+    height: fit-content;
+    /* margin: 60px 0; */
+}
+
+.pageTwoEffect {
+    position: relative;
+    width: 100%;
+    height: fit-content;
+    background: #F2F7FA;
+}
+
+.pageTwoEffect::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 20%;
+    height: 100%;
+    z-index: 0;
+    background: #E7F3F8;
+}
+
+.pageTwoWrapper {
+    z-index: 4;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 5%;
+    padding: 60px 30px;
+}
+
+.pageTwo span {
+    font-size: 0.85rem;
+    padding: 3px 5px;
+    border-radius: 3px;
+    width: max-content;
+}
+
+.personalized {
+    max-width: 400px;
+    z-index: 5;
+}
+
+.personalized h1 {
+    margin-top: 0;
+    font-size: 50px;
+}
+
+.cardsContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px 60px;
+    grid-template-rows: 1fr 1fr;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    padding-bottom: 0%;
+    height: 100%;
+    width: 100%;
+    background-color: #F9FCFD;
+}
+
+.card ul {
+    padding-left: 20px;
+    margin-top: 20px;
+    line-height: 28px;
+}
+
+.card p {
+    margin-bottom: 0;
+}
+
+.pageThree {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
-
 }
 
-.page3Head{
-    display: flex; 
-    gap: 10%; 
-    justify-content: center; 
-    width: 90%; 
-    margin-top: 70px; 
-}
-
-.cards2Container{
+.page3Head {
     display: flex;
-    width: 70% ; 
-    justify-content: space-between; 
-    min-width:fit-content;
+    gap: 10%;
+    justify-content: space-around;
+    width: 90%;
 }
 
-.card2{
+.page3Head p {
+    max-width: 450px;
+    line-height: 26px;
+    color: #A6A6A6;
+    font-size: 18px;
+    margin: auto 0;
+}
+
+.page3Head h1 {
+    font-size: 50px;
+    margin: 0;
+}
+
+.page3Head>p:nth-child(2) {
+    text-align: justify;
+}
+
+.cards2Container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 25px;
+    width: 90%;
+    justify-content: space-between;
+}
+
+.card2 {
     display: flex;
     flex-direction: column;
-    height: 500px;
-    width: 325px;
-    gap: 20px;
-    margin: 20px;
+    /* height: 500px;
+    width: 325px; */
+    margin: 20px auto;
+    max-width: 325px;
 }
 
-.pageFour{
+.card2 img {
+    width: 100%;
+}
+
+.card2 h2 {
+    text-align: center;
+}
+
+.card2 p {
+    text-align: start;
+    color: #A6A6A6;
+    margin-top: 0;
+}
+
+.pageFour {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -211,6 +293,31 @@ body{
     height: 100svh;
 }
 
-.pageFour img{
+.pageFour img {
     width: 390px;
+}
+
+
+
+/* Define the styles for the scrollbar */
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #8b8b8b;
+}
+
+/* Define the track */
+::-webkit-scrollbar-track {
+    background: #fcfcfc;
+}
+
+/* Define the handle */
+::-webkit-scrollbar-thumb {
+    background-color: #7a7a7a;
+    border-radius: 2px;
 }
